--- a/package.json
+++ b/package.json
@@ -1,19 +1,37 @@
 {
-  "name": "20-homework",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server/server.js",
+  "name": "React-Portfolio",
+  "version": "3.0",
+  "private": true,
   "scripts": {
-    "start": "node server --ignore client",
-    "develop": "concurrently \"cd server && npm run start\" \"cd client && npm start\"",
-    "install": "cd server && npm i && cd ../client && npm i",
-    "seed": "cd server && npm run seed",
-    "build": "cd client && npm run build"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "dependencies": {
+    "@headlessui/react": "^1.6.6",
+    "autoprefixer": "^10.4.7",
+    "custom-cursor-react": "^1.0.5",
+    "gray-matter": "^4.0.3",
+    "gsap": "^3.10.4",
+    "next": "12.1.6",
+    "next-themes": "^0.2.0",
+    "parse-numeric-range": "^1.3.0",
+    "postcss": "^8.4.13",
+    "react": "18.1.0",
+    "react-datepicker": "^4.8.0",
+    "react-dom": "18.1.0",
+    "react-markdown": "^8.0.3",
+    "react-syntax-highlighter": "^15.5.0",
+    "react-textarea-autosize": "^8.3.4",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
+    "styled-components": "^5.3.5",
+    "tailwindcss": "^3.0.24",
+    "uuid": "^8.3.2"
+  },
   "devDependencies": {
-    "concurrently": "^5.1.0"
+    "eslint": "8.15.0",
+    "eslint-config-next": "12.1.6"
   }
 }
