--- a/package.json
+++ b/package.json
@@ -1,37 +1,38 @@
 {
-  "name": "React-Portfolio",
-  "version": "3.0",
+  "name": "bucket-list",
+  "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
-    "@headlessui/react": "^1.6.6",
-    "autoprefixer": "^10.4.7",
-    "custom-cursor-react": "^1.0.5",
-    "gray-matter": "^4.0.3",
-    "gsap": "^3.10.4",
-    "next": "12.1.6",
-    "next-themes": "^0.2.0",
-    "parse-numeric-range": "^1.3.0",
-    "postcss": "^8.4.13",
-    "react": "18.1.0",
-    "react-datepicker": "^4.8.0",
-    "react-dom": "18.1.0",
-    "react-markdown": "^8.0.3",
-    "react-syntax-highlighter": "^15.5.0",
-    "react-textarea-autosize": "^8.3.4",
-    "remark": "^14.0.2",
-    "remark-html": "^15.0.1",
-    "styled-components": "^5.3.5",
-    "tailwindcss": "^3.0.24",
-    "uuid": "^8.3.2"
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "^2.1.3",
+    "web-vitals": "^0.2.4"
   },
-  "devDependencies": {
-    "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
